# libgetoptpp

./: .clang-format  CMakeLists.txt  README.md
examples/: example.cpp
include/: getoptpp
include/getoptpp_internal/: arg.hpp  option.hpp  parse.hpp
src/: CMakeLists.txt  option.cpp  parse.cpp
